--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,19 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Anonymous Proxy</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:400,500&display=swap"
+        rel="stylesheet">
         <link rel="icon" href="./favicon.png" />
         <link rel="stylesheet" href="./assets/css/main.css" />
+        <title>Anonymous Proxy</title>
     </head>
     
     <body>
         <div class="page">
             <header class="page__header">
                 <div class="btnBurguer_container">
-                    <button class="btnBurguer"> <a href="#web adalab"></a> 
+                    <button class="btnBurguer">
+                        <img src="../../assets/images/ico-menu.svg" alt=""> <a href="#web adalab"></a> 
                     </button>
                 </div>
                 <div class="header_text_container">
