--- a/public/index.html
+++ b/public/index.html
@@ -13,24 +13,22 @@
     
     <body>
         <div class="page">
-            <header class="page__header">
-                <div class="btnBurguer_container">
-                    <button class="btnBurguer">
-                        <img src="../../assets/images/ico-menu.svg" alt=""> <a href="#web adalab"></a> 
-                    </button>
+            <div class="page__header">
+                <div class="btnBurguer_container"> <a class="btnBurguer" href="#webAdalab" alt="Enlace a Adalab"> <img src="../../assets/images/ico-menu.svg"
+                alt="Menu"> </a>
+
                 </div>
                 <div class="header_text_container">
-                     <h1>anonymous proxy</h1>
+                     <h1>anonymous <br>proxy</h1>
 
-                    <p>in hac habitasse platea dictumst</p>
-                </div>
-                <div class="down_container"> <a href="#down"><img src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"> </a>
+                    <p>In hac habitasse platea dictumst</p> <a href="#down"><img src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
 
                 </div>
-            </header>
-            <main class="page__main">
-                <section class="section1">
-                     <h4>insomnia tips</h3>
+            </div>
+        </div>
+        <main class="page__main">
+            <section class="section1">
+                 <h4>insomnia tips</h3>
             <h2>looking through a window</h2>
             <p>donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus.
                 vivamus semper sodales rutrum.</p>
