--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:400,500&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+        rel="stylesheet">
         <link rel="icon" href="./favicon.png" />
         <link rel="stylesheet" href="./assets/css/main.css" />
         <title>Anonymous Proxy</title>
@@ -21,93 +23,80 @@
                 <div class="header_text_container">
                      <h1>anonymous <br>proxy</h1>
 
-                    <p>In hac habitasse platea dictumst</p> <a href="#down"><img src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
+                    <p>In hac habitasse platea dictumst</p> <a class="btn_down" href="#down" title="Scroll hacia el final de la página"><img src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
 
                 </div>
             </div>
         </div>
         <main class="page__main">
             <section class="section1">
-                 <h4>insomnia tips</h3>
-            <h2>looking through a window</h2>
-            <p>donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus.
-                vivamus semper sodales rutrum.</p>
+                 <h2>insomnia tips</h2>
 
-            <a class="go_link" href="#go">go</a>
+                 <h3>looking through a window</h3>
 
+                <p>donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
+                    luctus ex diam nec lectus. vivamus semper sodales rutrum.</p> <a class="go_link"
+                href="#go">go</a>
 
-    </section>
+            </section>
+            <section class="section2">
+                <div class="section2_title_container">
+                     <h3>3 reasons to purchase</h3>
 
+                </div>
+                <article class="articles_container">
+                    <div class="articles article1">
+                         <h4>ut sed metus</h4>
 
-    <section class="section2">
-        <div class="section2_title_container">
-            <h2>3 reasons to purchase</h2>
+                        <p>lorem ipsum dolor sit amet, consecteur.</p>
+                    </div>
+                    <div class="articles article2">
+                         <h4>curabitur ac erat</h4>
+
+                        <p>mauris mattis urna quis lorem molestie.</p>
+                    </div>
+                    <div class="articles article3">
+                         <h4>morbi dictum</h4>
+
+                        <p>aliquam in dolor et dolor tincidunt</p>
+                    </div>
+                    <div> <a class="link_more" href="#web adalab" title="More reasons">more reasons</a>
+
+                    </div>
+                    <div> <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+                </a>
+
+                    </div>
+                </article>
+            </section>
+        </main>
+        <footer class="page__footer">
+            <nav class="menu_container">
+                <ul>
+                    <li>articles</li>
+                    <li>books</li>
+                    <li>events</li>
+                    <li>reasons</li>
+                    <li>tips</li>
+                </ul>
+            </nav>
+            <nav class="rrss_container">
+                <ul>
+                    <li>twitter</li>
+                    <li>instagram</li>
+                    <li>mastodon.social</li>
+                </ul>
+            </nav>
+            <div class="copyright_container">
+                <div>
+                    <p>&copy;2017</p>
+                </div>
+                <div>
+                    <p>we &#10084; components</p>
+                </div>
+            </div>
+        </footer>
         </div>
+    </body>
 
-        <article class="articles_container">
-
-            <div class="articles article1">
-                <h3>ut sed metus</h3>
-                <p>lorem ipsum dolor sit amet, consecteur.</p>
-            </div>
-
-            <div class="articles article2">
-                <h3>curabitur ac erat</h3>
-                <p>mauris mattis urna quis lorem molestie.</p>
-
-            </div>
-
-
-            <div class="articles article3">
-                <h3>morbi dictum</h3>
-                <p>aliquam in dolor et dolor tincidunt</p>
-
-            </div>
-
-            <div>
-                <a class="link_more" href="#web adalab" title="More reasons">more reasons</a>
-            </div>
-
-            <div>
-               <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba"> </a>
-            </div>
-
-        </article>
-
-        
-     
-
-    </section>
-
-
-
-</main>
-      <footer class="page__footer">
-    <nav class="menu_container">
-        <ul>
-            <li>articles</li>
-            <li>books</li>
-            <li>events</li>
-            <li>reasons</li>
-            <li>tips</li>
-        </ul>
-    </nav>
-    <nav class="rrss_container">
-        <ul>
-            <li>twitter</li>
-            <li>instagram</li>
-            <li>mastodon.social</li>
-        </ul>
-    </nav>
-    <div class="copyright_container">
-        <div>
-            <p>&copy;2017</p>
-        </div>
-        <div>
-            <p>we &#10084; components</p>
-        </div>
-    </div>
-</footer>
-    </div>
-  </body>
 </html>
