--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
                 <div class="header_text_container">
                      <h1>anonymous <br>proxy</h1>
 
-                    <p>In hac habitasse platea dictumst</p> <a class="btn_down" href="#down" title="Scroll hacia el final de la página"><img src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
+                    <p>In hac habitasse platea dictumst</p> <a class="btn_down" href="#down" title="Scroll hacia el final de la página"><img
+                src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
 
                 </div>
             </div>
@@ -62,13 +63,13 @@
                 <div> <a class="link_more" href="#web adalab" title="More reasons">more reasons</a>
 
                 </div>
-                <div> <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
-            </a>
-
-                </div>
             </article>
         </section>
         <footer class="page__footer">
+            <div> <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+        </a>
+
+            </div>
             <nav class="menu_container">
                 <ul>
                     <li>articles</li>
