--- a/public/index.html
+++ b/public/index.html
@@ -65,11 +65,9 @@
                 </div>
             </article>
         </section>
-        <footer class="page__footer">
-            <div> <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+        <footer class="page__footer"> <a class="btn_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
         </a>
 
-            </div>
             <nav class="menu_container">
                 <ul>
                     <li>articles</li>
@@ -91,7 +89,7 @@
                     <p>&copy;2017</p>
                 </div>
                 <div>
-                    <p>we &#10084; components</p>
+                    <p>we <span style="color: #f26002;">&#10084;</span> components</p>
                 </div>
             </div>
         </footer>
