--- a/public/index.html
+++ b/public/index.html
@@ -15,16 +15,18 @@
     
     <body>
         <div class="page">
-            <div class="page__header">
-                <div class="btnBurguer_container"> <a class="btnBurguer" href="#webAdalab" alt="Enlace a Adalab"> <img src="../../assets/images/ico-menu.svg"
-                alt="Menu"> </a>
+            <div class="page__hero" id="hero">
+                <div class="btnBurguer_container"> <a class="btnBurguer" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab"> <img
+                src="../../assets/images/ico-menu.svg" alt="Menu"> </a>
 
                 </div>
-                <div class="header_text_container">
+                <div class="hero_text_container">
                      <h1>anonymous <br>proxy</h1>
 
-                    <p>In hac habitasse platea dictumst</p> <a class="btn_down" href="#down" title="Scroll hacia el final de la página"><img
-                src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
+                    <p>In hac habitasse platea dictumst</p> <a class="btn_down" href="#section2_start"
+                    title="3 Reasons To Purchase"><img
+                src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia 3 reasons to purcharse"></a>
 
                 </div>
             </div>
@@ -36,10 +38,10 @@
 
             <p>donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
                 luctus ex diam nec lectus. vivamus semper sodales rutrum.</p> <a class="go_link"
-            href="#go">go</a>
+            href="https://adalab.es/" target="_blank" title="Adalab" alt="Enlace a Adalab">go</a>
 
         </section>
-        <section class="section2">
+        <section class="section2" id="section2_start">
             <div class="section2_title_container">
                  <h3>3 reasons to purchase</h3>
 
@@ -60,40 +62,61 @@
 
                     <p>aliquam in dolor et dolor tincidunt</p>
                 </div>
-                <div class="item4"> <a class="link_more" href="#web adalab" title="More reasons">more reasons</a>
+                <div class="item4"> <a class="link_more" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">more reasons</a>
 
                 </div>
             </article>
         </section>
-        <footer class="page__footer"> <a class="btn_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
-        </a>
+        <footer class="page__footer"> <a class="btn_up" href="#hero" title="Up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+    </a>
 
             <nav class="menu_container">
                 <ul>
-                    <li>articles</li>
-                    <li>books</li>
-                    <li>events</li>
-                    <li>reasons</li>
-                    <li>tips</li>
-                </ul>
-            </nav>
-            <nav class="rrss_container">
-                <ul>
-                    <li>twitter</li>
-                    <li>instagram</li>
-                    <li>mastodon.social</li>
-                </ul>
-            </nav>
-            <div class="copyright_container">
-                <div>
-                    <p>&copy;2017</p>
-                </div>
-                <div>
-                    <p>we <span style="color: #f26002;">&#10084;</span> components</p>
-                </div>
-            </div>
-        </footer>
-        </div>
-    </body>
+                    <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                        alt="Enlace a Adalab">articles</li>
 
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">books</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">events</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">reasons</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">tips</li>
+        </ul>
+    </nav>
+
+    <nav class="rrss_container">
+        <ul>
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">twitter</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">instagram</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">mastodon.social</li>
+
+        </ul>
+    </nav>
+
+
+    <div class="copyright_container">
+
+        <div>
+            <p>&copy;2017</p>
+        </div>
+
+        <div>
+            <p>we <span style="color: #f26002;">&#10084;</span> components</p>
+        </div>
+    </div>
+
+</footer>
+    </div>
+  </body>
 </html>
