--- a/public/index.html
+++ b/public/index.html
@@ -71,49 +71,52 @@
         <footer class="page__footer"> <a class="btn_up" href="#hero" title="Up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
     </a>
 
-            <nav class="menu_container">
-                <ul>
-                    <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">articles</li>
+            <div class="footer_links_container">
+                <nav class="menu_container">
+                    <ul>
+                        <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                            alt="Enlace a Adalab">articles</li>
 
-            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                    alt="Enlace a Adalab">books</li>
+                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                        alt="Enlace a Adalab">books</li>
 
-            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                    alt="Enlace a Adalab">events</li>
+                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                        alt="Enlace a Adalab">events</li>
 
-            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                    alt="Enlace a Adalab">reasons</li>
+                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                        alt="Enlace a Adalab">reasons</li>
 
-            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                    alt="Enlace a Adalab">tips</li>
-        </ul>
-    </nav>
+                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                        alt="Enlace a Adalab">tips</li>
+            </ul>
+        </nav>
 
-    <nav class="rrss_container">
-        <ul>
-            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                    alt="Enlace a Adalab">twitter</li>
+        <nav class="rrss_container">
+            <ul>
+                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                        alt="Enlace a Adalab">twitter</li>
 
-            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                    alt="Enlace a Adalab">instagram</li>
+                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                        alt="Enlace a Adalab">instagram</li>
 
-            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                    alt="Enlace a Adalab">mastodon.social</li>
+                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                        alt="Enlace a Adalab">mastodon.social</li>
 
-        </ul>
-    </nav>
+            </ul>
+        </nav>
 
 
-    <div class="copyright_container">
+        <div class="copyright_container">
 
-        <div>
-            <p>&copy;2017</p>
+            <div>
+                <p>&copy;2017</p>
+            </div>
+
+            <div>
+                <p>we <span style="color: #f26002;">&#10084;</span> components</p>
+            </div>
         </div>
 
-        <div>
-            <p>we <span style="color: #f26002;">&#10084;</span> components</p>
-        </div>
     </div>
 
 </footer>
