--- a/public/index.html
+++ b/public/index.html
@@ -71,55 +71,54 @@
         <footer class="page__footer"> <a class="btn_up" href="#hero" title="Up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
     </a>
 
-            <div class="footer_links_container">
+            <div class="footer_info_container">
                 <nav class="menu_container">
                     <ul>
                         <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                            alt="Enlace a Adalab">articles</li>
+                            alt="Enlace a Adalab">articles</a>
 
-                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">books</li>
+                        </li>
+                        <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                            alt="Enlace a Adalab">books</a>
 
-                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">events</li>
+                        </li>
+                        <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                            alt="Enlace a Adalab">events</a>
 
-                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">reasons</li>
+                        </li>
+                        <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                            alt="Enlace a Adalab">reasons</a>
 
-                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">tips</li>
-            </ul>
-        </nav>
+                        </li>
+                        <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                            alt="Enlace a Adalab">tips</a>
 
-        <nav class="rrss_container">
-            <ul>
-                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">twitter</li>
+                        </li>
+                    </ul>
+                </nav>
+                <nav class="rrss_container">
+                    <ul>
+                        <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                            alt="Enlace a Adalab">twitter</a>
 
-                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">instagram</li>
+                        </li>
+                        <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                            alt="Enlace a Adalab">instagram</a>
 
-                <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">mastodon.social</li>
+                        </li>
+                        <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                            alt="Enlace a Adalab">mastodon.social</a>
 
-            </ul>
-        </nav>
-
-
-        <div class="copyright_container">
-
-            <div>
-                <p>&copy;2017</p>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="copyright_container">
+                    <p>&copy;2017</p>
+                    <p>we <span style="color: #f26002;">&#10084;</span> components</p>
+                </div>
             </div>
-
-            <div>
-                <p>we <span style="color: #f26002;">&#10084;</span> components</p>
-            </div>
+        </footer>
         </div>
+    </body>
 
-    </div>
-
-</footer>
-    </div>
-  </body>
 </html>
