--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
         rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
         rel="stylesheet">
-        <link rel="icon" href="./favicon.png" />
         <link rel="stylesheet" href="./assets/css/main.css" />
         <title>Anonymous Proxy</title>
     </head>
@@ -68,7 +67,7 @@
                 </div>
             </article>
         </section>
-        <footer class="page__footer"> <a class="btn_up" href="#hero" title="Up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+        <footer class="page__footer"> <a class="btn_up" href="#hero" title="Home"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
     </a>
 
             <div class="footer_info_container">
