--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
         <link rel="stylesheet" href="./assets/css/main.css" />
         <title>Anonymous Proxy</title>
     </head>
